Actualizando swagger y ToroVacaGameController
